tests/machine/x/fs/group_by_sort.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:07Z
open System

type Anon1 = {
    cat: string
    ``val``: int
}
type Anon2 = {
    cat: obj
    total: obj
}
type _Group<'K,'T>(key: 'K) =
    member val key = key with get, set
    member val Items = System.Collections.Generic.List<'T>() with get
    member this.size = this.Items.Count
    interface System.Collections.Generic.IEnumerable<'T> with
        member this.GetEnumerator() = (this.Items :> seq<'T>).GetEnumerator()
    interface System.Collections.IEnumerable with
        member this.GetEnumerator() = (this.Items :> System.Collections.IEnumerable).GetEnumerator()

let _group_by (src: 'T list) (keyfn: 'T -> 'K) : _Group<'K,'T> list =
    let groups = System.Collections.Generic.Dictionary<string,_Group<'K,'T>>()
    let order = System.Collections.Generic.List<string>()
    for it in src do
        let key = keyfn it
        let ks = string key
        let mutable g = Unchecked.defaultof<_Group<'K,'T>>
        if groups.TryGetValue(ks, &g) then ()
        else
            g <- _Group<'K,'T>(key)
            groups.Add(ks, g)
            order.Add(ks)
        g.Items.Add(it)
    [ for ks in order -> groups[ks] ]

let items: Anon1 list = [{ cat = "a"; ``val`` = 3 }; { cat = "a"; ``val`` = 1 }; { cat = "b"; ``val`` = 5 }; { cat = "b"; ``val`` = 2 }]
let grouped: Anon2 list = [ for g in _group_by [ for i in items do yield i ] (fun i -> i.cat) |> List.sortByDescending (fun gTmp -> let g = gTmp in List.sum [ for x in g do yield x.val ]) do
    yield { cat = g.key; total = List.sum [ for x in g do yield x.val ] } ]
printfn "%A" grouped
